--- a/android/app/src/debug/res/values/google_maps_api.xml
+++ b/android/app/src/debug/res/values/google_maps_api.xml
@@ -18,8 +18,8 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <!-- Mike's Key -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDfJe1dHLMPJyDv0Drr-ztB7UyOfEp3TxQ</string>
+    <!-- Mihajlo's Key -->
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBpPpGqcW9pMLggS0MsESjZoqJz9935ERE</string>
 
     <!-- Stefan's Key
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAI5KTQLa87XC7_XSMpk9SiUdAEuOy093o</string>
