--- a/android/app/src/main/res/layout/fragment_my_area.xml
+++ b/android/app/src/main/res/layout/fragment_my_area.xml
@@ -36,53 +36,11 @@
                 android:text="@string/my_area_title"
                 android:layout_marginTop="16dp" />
 
-            <TextView
-                android:id="@+id/info_subtitle"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:gravity="end"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/info_subtitle"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="12dp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:id="@+id/info_layers"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:gravity="start"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/info_layers"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginStart="25dp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:id="@+id/info_cde_description"
-                    android:textColor="@color/black"
-                    android:textSize="14sp"
-                    android:gravity="start"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.20"
-                    android:text="@string/info_cde_description"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginRight="16dp"/>
-
-            </LinearLayout>
+            <TableLayout
+                style="@style/table_layout"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/my_area_summary_table">
+            </TableLayout>
 
         </LinearLayout>
 
