--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -25,8 +25,10 @@
     <style name="back_button">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">#00000000</item>
+        <item name="android:background">?android:selectableItemBackground</item>
         <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:color">@color/darkGreen</item>
         <item name="android:scaleType">center</item>
         <item name="android:src">@drawable/arrow_white</item>
         <item name="android:padding">16dp</item>
@@ -36,7 +38,7 @@
     <style name="menu_button">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">#00000000</item>
+        <item name="android:background">?android:selectableItemBackground</item>
         <item name="android:clickable">true</item>
         <item name="android:scaleType">center</item>
         <item name="android:src">@drawable/ic_menu_white</item>
@@ -49,7 +51,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:src">@drawable/ic_search</item>
         <item name="android:contentDescription">@string/button_desc_search</item>
-        <item name="android:background">#00000000</item>
+        <item name="android:background">?android:selectableItemBackground</item>
         <item name="android:clickable">true</item>
         <item name="android:scaleType">center</item>
         <item name="android:padding">12dp</item>
@@ -59,8 +61,8 @@
 
     <style name="info_button">
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">#00000000</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">?android:selectableItemBackground</item>
         <item name="android:clickable">true</item>
         <item name="android:scaleType">center</item>
         <item name="android:contentDescription">@string/info_button</item>
