--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -32,7 +32,7 @@
         <item name="android:scaleType">center</item>
         <item name="android:src">@drawable/arrow_white</item>
         <item name="android:padding">16dp</item>
-        <item name="android:contentDescription">@string/back_button</item>
+        <item name="android:contentDescription">@string/button_desc_back</item>
     </style>
 
     <style name="menu_button">
@@ -65,15 +65,32 @@
         <item name="android:background">?android:selectableItemBackground</item>
         <item name="android:clickable">true</item>
         <item name="android:scaleType">center</item>
-        <item name="android:contentDescription">@string/info_button</item>
+        <item name="android:contentDescription">@string/button_desc_info</item>
         <item name="android:layout_gravity">end</item>
         <item name="android:paddingEnd">16dp</item>
-        <item name="android:text">@string/info_button</item>
+        <item name="android:text">@string/button_desc_info</item>
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">@color/colorTextPrimary</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textAlignment">textEnd</item>
         <item name="android:drawableStart">@drawable/info_white</item>
+    </style>
+
+    <style name="full_report_button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">?android:selectableItemBackground</item>
+        <item name="android:clickable">true</item>
+        <item name="android:scaleType">center</item>
+        <item name="android:contentDescription">@string/button_desc_full_report</item>
+        <item name="android:layout_gravity">end</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:text">@string/button_desc_full_report</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/darkGrey</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textAlignment">textEnd</item>
+        <item name="android:drawableStart">@drawable/ic_full_report</item>
     </style>
 
     <style name="big_button">
