--- a/android/app/src/main/res/layout/fragment_cde_details_view.xml
+++ b/android/app/src/main/res/layout/fragment_cde_details_view.xml
@@ -84,7 +84,7 @@
                 android:id="@+id/cde_rnag_table">
             </TableLayout>
 
-            <Button
+            <android.support.v7.widget.AppCompatButton
                 style="@style/full_report_button"
                 android:id="@+id/cde_full_report_button"/>
         </LinearLayout>
