--- a/android/app/src/main/res/layout/fragment_info_view.xml
+++ b/android/app/src/main/res/layout/fragment_info_view.xml
@@ -23,13 +23,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="16sp"
             android:orientation="vertical"
             android:background="@color/backgroundDefault" >
 
             <TextView
                 android:id="@+id/info_title"
                 android:textColor="@color/black"
-                android:textSize="25sp"
+                android:textSize="@dimen/text_huge"
                 android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -39,7 +40,7 @@
             <TextView
                 android:id="@+id/info_subtitle"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="@dimen/text_medium"
                 android:gravity="end"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -50,7 +51,7 @@
             <TextView
                 android:id="@+id/info_description"
                 android:textColor="@color/black"
-                android:textSize="13sp"
+                android:textSize="@dimen/text_small"
                 android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -67,7 +68,7 @@
                 <TextView
                     android:id="@+id/info_home_buttons"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="@dimen/text_medium"
                     android:gravity="start"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -95,7 +96,7 @@
                 <TextView
                     android:id="@+id/info_gpsText"
                     android:textColor="@color/black"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/text_small"
                     android:gravity="start"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -114,7 +115,7 @@
                 <TextView
                     android:id="@+id/info_layers"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="@dimen/text_medium"
                     android:gravity="start"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -142,7 +143,7 @@
                 <TextView
                     android:id="@+id/info_cde_description"
                     android:textColor="@color/black"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/text_small"
                     android:gravity="start"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -171,7 +172,7 @@
                 <TextView
                     android:id="@+id/info_wims_description"
                     android:textColor="@color/black"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/text_small"
                     android:gravity="start"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -200,7 +201,7 @@
                 <TextView
                     android:id="@+id/info_image_description"
                     android:textColor="@color/black"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/text_small"
                     android:gravity="start"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
