--- a/android/app/src/main/res/layout/fragment_my_area.xml
+++ b/android/app/src/main/res/layout/fragment_my_area.xml
@@ -29,7 +29,7 @@
             <TextView
                 android:id="@+id/my_area_title"
                 android:textColor="@color/black"
-                android:textSize="25sp"
+                android:textSize="@dimen/text_huge"
                 android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
