--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -69,7 +69,7 @@
         <item name="android:layout_gravity">end</item>
         <item name="android:paddingEnd">16dp</item>
         <item name="android:text">@string/button_desc_info</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">@dimen/text_button_large</item>
         <item name="android:textColor">@color/colorTextPrimary</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textAlignment">textEnd</item>
@@ -84,9 +84,8 @@
         <item name="android:scaleType">center</item>
         <item name="android:contentDescription">@string/button_desc_full_report</item>
         <item name="android:layout_gravity">end</item>
-        <item name="android:paddingEnd">16dp</item>
         <item name="android:text">@string/button_desc_full_report</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">@dimen/text_button_medium</item>
         <item name="android:textColor">@color/darkGrey</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textAlignment">textEnd</item>
@@ -102,7 +101,7 @@
         <item name="android:clickable">true</item>
         <item name="android:scaleType">center</item>
         <item name="android:padding">16dp</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">@dimen/text_button_small</item>
         <item name="android:textColor">@color/colorTextSecondary</item>
         <item name="android:textAllCaps">false</item>
     </style>
@@ -113,7 +112,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">8dp</item>
         <item name="android:textColor">@color/darkGrey</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/text_large</item>
         <item name="android:paddingStart">8dp</item>
         <item name="android:paddingEnd">8dp</item>
         <item name="android:gravity">center</item>
@@ -124,7 +123,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">8dp</item>
         <item name="android:textColor">@color/darkGrey</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/text_medium</item>
         <item name="android:paddingStart">8dp</item>
         <item name="android:paddingEnd">8dp</item>
         <item name="android:gravity">center</item>
@@ -153,6 +152,7 @@
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">2</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/text_tiny</item>
         <item name="android:paddingStart">8dp</item>
         <item name="android:paddingEnd">8dp</item>
         <item name="android:gravity">center</item>
@@ -163,6 +163,7 @@
         <item name="android:textColor">@color/darkGrey</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/text_tiny</item>
         <item name="android:paddingStart">8dp</item>
         <item name="android:paddingEnd">8dp</item>
         <item name="android:gravity">center</item>
@@ -174,6 +175,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingStart">8dp</item>
         <item name="android:paddingEnd">8dp</item>
+        <item name="android:textSize">@dimen/text_tiny</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">2</item>
