--- a/android/app/src/main/res/layout/activity_data_view.xml
+++ b/android/app/src/main/res/layout/activity_data_view.xml
@@ -14,6 +14,16 @@
             style="@style/menu_button"
             android:id="@+id/data_view_hamburger_button"/>
 
+        <TextView
+            android:id="@+id/layer_name"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text=""
+            android:textSize="@dimen/text_large"
+            android:textColor="@color/colorTextPrimary"
+            android:ellipsize="end"
+            android:maxLines="1"/>
+
         <ImageButton
             style="@style/search_button"
             android:id="@+id/data_view_search_button"/>
@@ -27,9 +37,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
-        tools:context="com.bitbusters.android.speproject.DataViewActivity"
-        tools:layout="@layout/activity_data_view" />
+        android:layout_marginTop="?attr/actionBarSize" />
 
     <ProgressBar
         android:id="@+id/progress_spinner"
@@ -48,20 +56,20 @@
         android:src="@drawable/target_white"
         app:backgroundTint="@color/colorSecondary"/>
 
-    <TextView
-        android:id="@+id/layer_name"
-        android:text=""
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:shadowColor="#000000"
-        android:shadowDx="1.5"
-        android:shadowDy="1.3"
-        android:shadowRadius="1.6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:padding="6dp"
-        android:layout_gravity="top|end"/>
+    <!--<TextView-->
+        <!--android:id="@+id/layer_name"-->
+        <!--android:text=""-->
+        <!--android:textSize="15sp"-->
+        <!--android:textStyle="bold"-->
+        <!--android:shadowColor="#000000"-->
+        <!--android:shadowDx="1.5"-->
+        <!--android:shadowDy="1.3"-->
+        <!--android:shadowRadius="1.6"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginEnd="0dp"-->
+        <!--android:layout_marginTop="?attr/actionBarSize"-->
+        <!--android:padding="6dp"-->
+        <!--android:layout_gravity="top|end"/>-->
 
 </android.support.design.widget.CoordinatorLayout>
