--- a/android/app/src/main/res/layout/fragment_cde_data_view.xml
+++ b/android/app/src/main/res/layout/fragment_cde_data_view.xml
@@ -12,6 +12,17 @@
             style="@style/back_button"
             android:id="@+id/back_button_cde_data_view"/>
 
+        <TextView
+            android:id="@+id/layer_name"
+            android:text=""
+            android:textSize="@dimen/text_medium"
+            android:textStyle="bold"
+            android:textColor="@color/colorTextPrimary"
+            android:layout_width="wrap_content"
+            android:layout_height="?attr/actionBarSize"
+            android:ellipsize="end"
+            android:maxLines="1"/>
+
         <Button
             style="@style/info_button"
             android:id="@+id/info_button_cde_data_view"/>
