--- a/android/app/src/main/res/layout/fragment_info_view.xml
+++ b/android/app/src/main/res/layout/fragment_info_view.xml
@@ -7,7 +7,7 @@
 
     <android.support.v7.widget.Toolbar
         style="@style/toolbar_default"
-        android:id="@+id/infoview_toolbar">
+        android:id="@+id/info_view_toolbar">
 
         <ImageButton
             style="@style/back_button"
@@ -36,17 +36,6 @@
                 android:layout_height="wrap_content"
                 android:text="@string/info_title"
                 android:layout_marginTop="16dp" />
-
-            <TextView
-                android:id="@+id/info_subtitle"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_medium"
-                android:gravity="end"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/info_subtitle"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="12dp" />
 
             <TextView
                 android:id="@+id/info_description"
@@ -103,7 +92,7 @@
                     android:layout_weight="0.20"
                     android:text="@string/info_gpsText"
                     android:layout_marginTop="8dp"
-                    android:layout_marginRight="16dp" />
+                    android:layout_marginEnd="16dp" />
 
             </LinearLayout>
 
@@ -150,7 +139,7 @@
                     android:layout_weight="0.20"
                     android:text="@string/info_cde_description"
                     android:layout_marginTop="12dp"
-                    android:layout_marginRight="16dp"/>
+                    android:layout_marginEnd="16dp"/>
 
             </LinearLayout>
 
@@ -179,7 +168,7 @@
                     android:layout_weight="0.20"
                     android:text="@string/info_wims_description"
                     android:layout_marginTop="8dp"
-                    android:layout_marginRight="16dp"/>
+                    android:layout_marginEnd="16dp"/>
 
             </LinearLayout>
 
@@ -208,10 +197,44 @@
                     android:layout_weight="0.20"
                     android:text="@string/info_permit_description"
                     android:layout_marginTop="8dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginEnd="16dp"
                     android:layout_marginBottom="16dp"/>
 
             </LinearLayout>
+            <TextView
+                android:id="@+id/info_subtitle"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_small"
+                android:gravity="end"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/info_subtitle"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/epimorphics_logo"
+                    android:layout_width="120dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:src="@drawable/epimorphics_logo"/>
+
+                <ImageView
+                    android:id="@+id/uob_logo"
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    android:layout_alignTop="@id/epimorphics_logo"
+                    android:layout_toStartOf="@id/epimorphics_logo"
+                    android:layout_marginEnd="16dp"
+                    android:src="@drawable/uob_logo"/>
+
+            </RelativeLayout>
 
         </LinearLayout>
 
