--- a/android/app/src/main/res/layout/fragment_my_area.xml
+++ b/android/app/src/main/res/layout/fragment_my_area.xml
@@ -7,7 +7,7 @@
 
     <android.support.v7.widget.Toolbar
         style="@style/toolbar_default"
-        android:id="@+id/infoview_toolbar">
+        android:id="@+id/info_view_toolbar">
 
         <ImageButton
             style="@style/back_button"
