--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -76,23 +76,22 @@
         <item name="android:drawableStart">@drawable/info_white</item>
     </style>
 
-    <style name="full_report_button">
+    <style name="full_report_button" parent="Theme.AppCompat">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">?android:selectableItemBackground</item>
-        <item name="android:clickable">true</item>
-        <item name="android:scaleType">center</item>
         <item name="android:contentDescription">@string/button_desc_full_report</item>
+        <item name="android:paddingEnd">16sp</item>
+        <item name="android:paddingTop">16sp</item>
+        <item name="android:paddingBottom">16sp</item>
         <item name="android:layout_gravity">end</item>
         <item name="android:text">@string/button_desc_full_report</item>
         <item name="android:textSize">@dimen/text_button_medium</item>
-        <item name="android:textColor">@color/darkGrey</item>
+        <item name="android:textColor">@color/colorTextPrimary</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textAlignment">textEnd</item>
         <item name="android:drawableStart">@drawable/ic_full_report</item>
     </style>
 
-    <style name="big_button">
+    <style name="big_button" parent="Theme.AppCompat">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">fill_parent</item>
         <item name="android:layout_weight">1</item>
@@ -102,7 +101,7 @@
         <item name="android:scaleType">center</item>
         <item name="android:padding">16dp</item>
         <item name="android:textSize">@dimen/text_button_small</item>
-        <item name="android:textColor">@color/colorTextSecondary</item>
+        <item name="android:textColor">@color/colorTextPrimary</item>
         <item name="android:textAllCaps">false</item>
     </style>
 
