--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -4,6 +4,15 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
+    <dimen name="table_base_padding">0sp</dimen>
+    <dimen name="table_child_padding">16sp</dimen>
+
+    <dimen name="layout_base_vertical_padding">16sp</dimen>
+    <dimen name="layout_base_horizontal_padding">24sp</dimen>
+
+    <dimen name="text_view_parent_vertical_padding">16sp</dimen>
+    <dimen name="text_view_child_vertical_padding">8sp</dimen>
+
     <dimen name="text_tiny">12sp</dimen>
     <dimen name="text_small">14sp</dimen>
     <dimen name="text_medium">16sp</dimen>
@@ -13,4 +22,6 @@
     <dimen name="text_button_small">12sp</dimen>
     <dimen name="text_button_medium">13sp</dimen>
     <dimen name="text_button_large">15sp</dimen>
+
+    <dimen name="big_button_padding">8sp</dimen>
 </resources>
