--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -95,8 +95,8 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">fill_parent</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:layout_marginStart">8dp</item>
-        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:layout_marginStart">@dimen/big_button_padding</item>
+        <item name="android:layout_marginEnd">@dimen/big_button_padding</item>
         <item name="android:clickable">true</item>
         <item name="android:scaleType">center</item>
         <item name="android:padding">16dp</item>
