--- a/android/app/src/main/res/values-xlarge/dimens.xml
+++ b/android/app/src/main/res/values-xlarge/dimens.xml
@@ -19,6 +19,7 @@
     <dimen name="text_medium">21sp</dimen>
     <dimen name="text_large">24sp</dimen>
     <dimen name="text_huge">30sp</dimen>
+    <dimen name="text_massive">60sp</dimen>
 
     <dimen name="text_button_small">14sp</dimen>
     <dimen name="text_button_medium">15sp</dimen>
