--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -181,6 +181,25 @@
         <item name="android:layout_weight">1</item>
     </style>
 
+    <style name="text_view_dialog_parent" parent="@android:style/Widget.TextView">
+        <item name="android:textColor">@color/colorTextPrimary</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:textSize">@dimen/text_small</item>
+        <item name="android:gravity">start</item>
+    </style>
+
+    <style name="text_view_dialog_child" parent="@android:style/Widget.TextView">
+        <item name="android:textColor">@color/colorTextPrimary</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:textSize">@dimen/text_small</item>
+        <item name="android:gravity">start</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
